(test
  (name gym_env_test)
  (modules gym_env_test)
  (libraries ounit2 core state_action cartpole pendulum)
)


(test 
  (name pendulum_test)
  (modules pendulum_test)
  (libraries pendulum ounit2 core)
)

(test 
  (name blackjack_test)
  (modules blackjack_test)
  (libraries blackjack ounit2 core)
)
