(test
  (name state_action_test)
  (modules state_action_test)
  (libraries ounit2 core state_action cartpole pendulum))


(test 
  (name pendulum_test)
  (modules pendulum_test)
  (libraries pendulum ounit2 core)
)

(test 
  (name blackjack_test)
  (modules blackjack_test)
  (libraries blackjack ounit2 core)
)
