(library
 (name qlearning)
 (modules qlearning)
 (libraries core simulation base_algorithm state_action))

(library
 (name base_algorithm)
 (modules base_algorithm)
 (libraries core))

(library
 (name state_action)
 (modules state_action)
 (libraries core simulation)
 (preprocess (pps bisect_ppx))
 )

(library
 (name lunar_lander)
 (modules lunar_lander)
 (libraries core simulation))

(library
 (name pendulum)
 (modules pendulum)
 (libraries core unix simulation))
(library
 (name cartpole)
 (modules cartpole)
 (libraries core unix simulation))

(library
 (name blackjack)
 (modules blackjack)
 (libraries core unix simulation))


(library
 (name simulation)
 (modules simulation)
 (libraries core unix ))

; (library
;  (name gym_env)
;  (modules gym_env)
;  (libraries core pyml simulation pendulum))
