(library
 (name qlearning)
 (modules qlearning)
 (libraries core core_unix simulation base_algorithm state_action))

(library
 (name vpg)
 (modules vpg)
 (libraries core simulation base_algorithm state_action))

(library
 (name vpgnn)
 (modules vpgnn)
 (libraries core torch simulation base_algorithm state_action))

(library
 (name base_algorithm)
 (modules base_algorithm)
 (libraries core simulation pendulum cartpole blackjack))

(library
 (name state_action)
 (modules state_action)
 (libraries core simulation)
 (preprocess
  (pps bisect_ppx)))

(library
 (name pendulum)
 (modules pendulum)
 (libraries core unix simulation)
 (preprocess
  (pps bisect_ppx)))

(library
 (name cartpole)
 (modules cartpole)
 (libraries core unix simulation))

(library
 (name blackjack)
 (modules blackjack)
 (libraries core unix simulation)
 (preprocess
  (pps bisect_ppx)))

(library
 (name simulation)
 (modules simulation)
 (libraries core unix)
 (preprocess
  (pps bisect_ppx)))

; (library
;  (name gym_env)
;  (modules gym_env)
;  (libraries core pyml simulation pendulum))
