(library
 (name qlearning)
 (modules qlearning)
 (libraries core simulation base_algorithm state_action utils)
 (preprocess
  (pps bisect_ppx)))

; (library
;  (name vpg)
;  (modules vpg)
;  (libraries core simulation base_algorithm state_action utils)
;  (preprocess
;   (pps bisect_ppx)))

; (library
;  (name vpgnn)
;  (modules vpgnn)
;  (libraries core simulation base_algorithm state_action utils)
;  (preprocess
;   (pps bisect_ppx)))

(library
 (name base_algorithm)
 (modules base_algorithm)
 (libraries core simulation pendulum cartpole blackjack)
 (preprocess
  (pps bisect_ppx)))

(library
 (name state_action)
 (modules state_action)
 (libraries core simulation)
 (preprocess
  (pps bisect_ppx)))

(library
 (name utils)
 (modules utils)
 (libraries core simulation)
 (preprocess
  (pps bisect_ppx)))

(library
 (name pendulum)
 (modules pendulum)
 (libraries utils core unix simulation)
 (preprocess
  (pps bisect_ppx)))

(library
 (name cartpole)
 (modules cartpole)
 (libraries utils core unix simulation)
 (preprocess
  (pps bisect_ppx)))

(library
 (name blackjack)
 (modules blackjack)
 (libraries utils core unix simulation)
 (preprocess
  (pps bisect_ppx)))

(library
 (name simulation)
 (modules simulation)
 (libraries core unix)
 (preprocess
  (pps bisect_ppx)))

; (library
;  (name gym_env)
;  (modules gym_env)
;  (libraries core pyml simulation pendulum))
